# symdex

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_RESULTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  smithery.yaml
.cursor/: mcp_settings.json
.github/workflows/: ci.yml  release.yml
.well-known/mcp/: server-card.json
docs/: CONFIGURATION.md  DOCKER.md
scripts/: compare_grep_symdex.py  try_api.py
src/symdex/: __init__.py  client.py  exceptions.py
src/symdex/cli/: main.py
src/symdex/core/: __init__.py  _js_ts_parser.py  autoreindex.py  config.py  engine.py  indexer.py  search.py
src/symdex/mcp/: server.py
tests/: conftest.py  test_call_graph.py  test_client.py  test_config.py  test_core.py  test_indexer.py
