[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symdex-100"
version = "1.0.0"
description = "Inline semantic fingerprints for 100x faster code search. Language-agnostic Cypher metadata embedded directly into source files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Symdex Contributors"},
]
keywords = [
    "code-search", "semantic-indexing", "llm", "mcp", "developer-tools",
    "static-analysis", "code-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# LLM providers — install at least one
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.12.0"]
gemini = ["google-genai>=1.0.0"]
# Convenience bundles
llm-all = ["symdex-100[anthropic,openai,gemini]"]
mcp = ["fastmcp>=0.4.0"]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = ["symdex-100[llm-all,mcp,dev]"]

[project.scripts]
symdex = "symdex.cli.main:cli"

[project.urls]
Homepage = "https://github.com/symdex/symdex-100"
Documentation = "https://github.com/symdex/symdex-100#readme"
Issues = "https://github.com/symdex/symdex-100/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
